# Needle

./: .gitignore  AnimData.cpp  AnimData.h  Animation.cpp  Animation.h  Audio.cpp  Bullets.cpp  Bullets.h  CMakeLists.txt  Camera.cpp  Cleanup.cpp  Complex.cpp  Complex.h  CubeMap.cpp  CubeMap.h  Enemy.cpp  Enemy.h  Event.cpp  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Game.cpp  Game.h  Hitbox.cpp  Hitbox.h  Init.cpp  Laser.cpp  LuaData.cpp  LuaData.h  Math.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Move.cpp  Move.h  OBJ_Loader.h  PlayUI.cpp  PlayUI.h  (+39 more)
app/: CMakeLists.txt
cmake/freetype-gl/: FindFreetype-gl.cmake
docs/: CMakeLists.txt  Doxyfile.in
models/: baseStairs.blend  baseStairs.blend1  longStairs.blend  stairs.blend  stairs.mtl  tree.blend  tree.mtl
scripts/: stage1.lua
shaders/: frag3d.shader  fragBloom.shader  fragGaussian.shader  fragPrimitive.shader  fragPrimitiveBloom.shader  fragSingleChannel.shader  fragSingleChannel_old.shader  fragTransform.shader  skyboxFragShader.shader  skyboxVertexShader.shader  vertex3d.shader  vertexPrimitive.shader  vertexSingleChannel.shader  vertexSingleChannel_old.shader  vertexTransform.shader  vertexTransform_old.shader
src/FastTrigo/: fasttrigo.h
src/data/: AnimData.h  LuaData.h  ProjData.cpp  ProjData.h
src/entities/: Animation.cpp  Animation.h  Bullets.cpp  Bullets.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Hitbox.cpp  Hitbox.h  Laser.cpp  Laser.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Spawner.cpp  Spawner.h  Transform.cpp  Transform.h
src/game/: Audio.cpp  Audio.h  Camera.cpp  Camera.h  Pool.cpp  Pool.h  Stage.cpp  Stage.h
src/main/: Cleanup.cpp  Event.cpp  Game.cpp  Game.h  Init.cpp  Loop.cpp  Render.cpp
src/math/: Complex.cpp  Complex.h  Math.h  RNG.h
src/menu/: PlayUI.cpp  PlayUI.h  UI.h
src/stb/: stb_image.h
src/util/: Log.h  Script.cpp  Script.h  StringFormat.cpp  StringFormat.h  Timer.cpp  Timer.h
src/video/: CubeMap.cpp  CubeMap.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Material.h  Mesh.cpp  Mesh.h  Model.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
